[gd_scene load_steps=2 format=3 uid="uid://b0lvby6e8yfs2"]

[ext_resource type="Script" path="res://Scripts/floating_menu.gd" id="1_ltftt"]

[node name="FloatingMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 192.0
offset_bottom = 256.0
script = ExtResource("1_ltftt")

[node name="BackPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="GatesLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Gates"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="ANDBtn" type="Button" parent="VBox/HBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "And"

[node name="NOTBtn" type="Button" parent="VBox/HBox"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Not"

[connection signal="button_down" from="VBox/HBox/ANDBtn" to="." method="_on_and_btn_button_down"]
[connection signal="button_up" from="VBox/HBox/ANDBtn" to="." method="_on_and_btn_button_up"]
[connection signal="button_down" from="VBox/HBox/NOTBtn" to="." method="_on_not_btn_button_down"]
[connection signal="button_up" from="VBox/HBox/NOTBtn" to="." method="_on_not_btn_button_up"]
